--- a/geyser_mappings/tripwire_mappings.json
+++ b/geyser_mappings/tripwire_mappings.json
@@ -11,6 +11,10 @@
 					"face_dimming": true,
 					"ambient_occlusion": true
                 }
+            },
+            "selection_box": {
+                "origin": [-5, 0, -5],
+                "size": [10, 1, 10]
             }
         },
         "minecraft:tripwire[attached=false,disarmed=true,east=false,north=false,powered=true,south=true,west=false]": {
@@ -23,6 +27,10 @@
 					"face_dimming": true,
 					"ambient_occlusion": true
                 }
+            },
+            "selection_box": {
+                "origin": [-5, 0, -5],
+                "size": [10, 1, 10]
             }
         },
         "minecraft:tripwire[attached=false,disarmed=true,east=false,north=false,powered=true,south=true,west=true]": {
@@ -35,6 +43,10 @@
 					"face_dimming": true,
 					"ambient_occlusion": true
                 }
+            },
+            "selection_box": {
+                "origin": [-5, 0, -5],
+                "size": [10, 1, 10]
             }
         },
         "minecraft:tripwire[attached=false,disarmed=false,east=false,north=true,powered=false,south=false,west=false]": {
@@ -47,6 +59,10 @@
 					"face_dimming": true,
 					"ambient_occlusion": true
                 }
+            },
+            "selection_box": {
+                "origin": [-5, 0, -5],
+                "size": [10, 1, 10]
             }
         },
         "minecraft:tripwire[attached=false,disarmed=false,east=false,north=true,powered=true,south=false,west=false]": {
@@ -59,6 +75,10 @@
 					"face_dimming": true,
 					"ambient_occlusion": true
                 }
+            },
+            "selection_box": {
+                "origin": [-5, 0, -5],
+                "size": [10, 1, 10]
             }
         },
         "minecraft:tripwire[attached=false,disarmed=false,east=false,north=true,powered=false,south=false,west=true]": {
@@ -71,6 +91,10 @@
 					"face_dimming": true,
 					"ambient_occlusion": true
                 }
+            },
+            "selection_box": {
+                "origin": [-5, 0, -5],
+                "size": [10, 1, 10]
             }
         },
         "minecraft:tripwire[attached=false,disarmed=false,east=false,north=true,powered=true,south=false,west=true]": {
@@ -95,6 +119,10 @@
 					"face_dimming": true,
 					"ambient_occlusion": true
                 }
+            },
+            "selection_box": {
+                "origin": [-5, 0, -5],
+                "size": [10, 1, 10]
             }
         },
         "minecraft:tripwire[attached=false,disarmed=true,east=false,north=true,powered=false,south=false,west=false]": {
@@ -119,6 +147,178 @@
 					"face_dimming": true,
 					"ambient_occlusion": true
                 }
+            },
+            "selection_box": {
+                "origin": [-5, 0, -5],
+                "size": [10, 1, 10]
+            }
+        },
+        "minecraft:tripwire[attached=false,disarmed=true,east=false,north=true,powered=true,south=false,west=false]": {
+            "name": "redpacket_stage_1",
+            "geometry": "geometry.customcrops.redpacket.stage_1",
+            "material_instances": {
+                "*": {
+                    "texture": "redpacket_stage",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                },
+                "stage": {
+                    "texture": "redpacket_stage",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                },
+                "fu": {
+                    "texture": "fu_character",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                }
+            },
+            "selection_box": {
+                "origin": [-5, 0, -5],
+                "size": [10, 1, 10]
+            }
+        },
+        "minecraft:tripwire[attached=false,disarmed=true,east=false,north=true,powered=false,south=false,west=true]": {
+            "name": "redpacket_stage_2",
+            "geometry": "geometry.customcrops.redpacket.stage_2",
+            "material_instances": {
+                "*": {
+                    "texture": "redpacket_stage",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                },
+                "stage": {
+                    "texture": "redpacket_stage",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                },
+                "fu": {
+                    "texture": "fu_character",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                }
+            },
+            "selection_box": {
+                "origin": [-5, 0, -5],
+                "size": [10, 1, 10]
+            }
+        },
+        "minecraft:tripwire[attached=false,disarmed=true,east=false,north=true,powered=true,south=false,west=true]": {
+            "name": "redpacket_stage_3",
+            "geometry": "geometry.customcrops.redpacket.stage_3",
+            "material_instances": {
+                "*": {
+                    "texture": "redpacket_stage",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                },
+                "stage": {
+                    "texture": "redpacket_stage",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                },
+                "fu": {
+                    "texture": "fu_character",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                }
+            },
+            "selection_box": {
+                "origin": [-5, 0, -5],
+                "size": [10, 1, 10]
+            }
+        },
+        "minecraft:tripwire[attached=false,disarmed=false,east=false,north=true,powered=false,south=true,west=false]": {
+            "name": "redpacket_stage_4",
+            "geometry": "geometry.customcrops.redpacket.stage_4",
+            "material_instances": {
+                "*": {
+                    "texture": "redpacket_stage",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                },
+                "stage": {
+                    "texture": "redpacket_stage",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                },
+                "fu": {
+                    "texture": "fu_character",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                }
+            },
+            "selection_box": {
+                "origin": [-5, 0, -5],
+                "size": [10, 1, 10]
+            }
+        },
+        "minecraft:tripwire[attached=false,disarmed=false,east=false,north=true,powered=true,south=true,west=false]": {
+            "name": "redpacket_stage_5",
+            "geometry": "geometry.customcrops.redpacket.stage_5",
+            "material_instances": {
+                "*": {
+                    "texture": "redpacket_stage",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                },
+                "stage": {
+                    "texture": "redpacket_stage",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                },
+                "fu": {
+                    "texture": "fu_character",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                }
+            },
+            "selection_box": {
+                "origin": [-5, 0, -5],
+                "size": [10, 1, 10]
+            }
+        },
+        "minecraft:tripwire[attached=false,disarmed=false,east=false,north=true,powered=false,south=true,west=true]": {
+            "name": "redpacket_stage_6",
+            "geometry": "geometry.customcrops.redpacket.stage_6",
+            "material_instances": {
+                "*": {
+                    "texture": "redpacket_stage",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                },
+                "stage": {
+                    "texture": "redpacket_stage",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                },
+                "fu": {
+                    "texture": "fu_character",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                }
+            },
+            "selection_box": {
+                "origin": [-5, 0, -5],
+                "size": [10, 1, 10]
             }
         }
     }
