--- a/geyser_mappings/tripwire_mappings.json
+++ b/geyser_mappings/tripwire_mappings.json
@@ -320,6 +320,70 @@
                 "origin": [-5, 0, -5],
                 "size": [10, 1, 10]
             }
+        },
+        "minecraft:tripwire[attached=false,disarmed=false,east=false,north=true,powered=true,south=true,west=true]": {
+            "name": "chinese_cabbage_stage_1",
+            "geometry": "geometry.customcrops.chinese_cabbage.stage_1",
+            "material_instances": {
+                "*": {
+                    "texture": "chinese_cabbage_stage",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                }
+            },
+            "selection_box": {
+                "origin": [-5, 0, -5],
+                "size": [10, 1, 10]
+            }
+        },
+        "minecraft:tripwire[attached=false,disarmed=true,east=false,north=true,powered=false,south=true,west=false]": {
+            "name": "chinese_cabbage_stage_2",
+            "geometry": "geometry.customcrops.chinese_cabbage.stage_2",
+            "material_instances": {
+                "*": {
+                    "texture": "chinese_cabbage_stage",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                }
+            },
+            "selection_box": {
+                "origin": [-5, 0, -5],
+                "size": [10, 1, 10]
+            }
+        },
+        "minecraft:tripwire[attached=false,disarmed=true,east=false,north=true,powered=true,south=true,west=false]": {
+            "name": "chinese_cabbage_stage_3",
+            "geometry": "geometry.customcrops.chinese_cabbage.stage_3",
+            "material_instances": {
+                "*": {
+                    "texture": "chinese_cabbage_stage",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                }
+            },
+            "selection_box": {
+                "origin": [-5, 0, -5],
+                "size": [10, 1, 10]
+            }
+        },
+        "minecraft:tripwire[attached=false,disarmed=true,east=false,north=true,powered=false,south=true,west=true]": {
+            "name": "chinese_cabbage_stage_4",
+            "geometry": "geometry.customcrops.chinese_cabbage.stage_4",
+            "material_instances": {
+                "*": {
+                    "texture": "chinese_cabbage_stage",
+                    "render_method": "alpha_test",
+					"face_dimming": true,
+					"ambient_occlusion": true
+                }
+            },
+            "selection_box": {
+                "origin": [-5, 0, -5],
+                "size": [10, 1, 10]
+            }
         }
     }
 }
