--- a/geyser_mappings/tripwire_mappings.json
+++ b/geyser_mappings/tripwire_mappings.json
@@ -724,6 +724,204 @@
                             10
                         ]
                     }
+                },
+                "attached=false,disarmed=true,east=true,north=false,powered=true,south=false,west=true": {
+                    "name": "tomato_stage_1",
+                    "geometry": "geometry.customcrops.tomato.stage_1",
+                    "material_instances": {
+                        "*": {
+                            "texture": "tomato_stage_1",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "leaves": {
+                            "texture": "tomato_stage_1",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "center": {
+                            "texture": "tomato_center",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        }
+                    },
+                    "selection_box": {
+                        "origin": [
+                            -5,
+                            0,
+                            -5
+                        ],
+                        "size": [
+                            10,
+                            1,
+                            10
+                        ]
+                    }
+                },
+                "attached=false,disarmed=false,east=true,north=false,powered=false,south=true,west=false": {
+                    "name": "tomato_stage_2",
+                    "geometry": "geometry.customcrops.tomato.stage_2",
+                    "material_instances": {
+                        "*": {
+                            "texture": "tomato_stage_2",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "leaves": {
+                            "texture": "tomato_stage_2",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "center": {
+                            "texture": "tomato_center",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        }
+                    },
+                    "selection_box": {
+                        "origin": [
+                            -5,
+                            0,
+                            -5
+                        ],
+                        "size": [
+                            10,
+                            1,
+                            10
+                        ]
+                    }
+                },
+                "attached=false,disarmed=false,east=true,north=false,powered=true,south=true,west=false": {
+                    "name": "tomato_stage_3",
+                    "geometry": "geometry.customcrops.tomato.stage_3",
+                    "material_instances": {
+                        "*": {
+                            "texture": "tomato_stage_3",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "leaves": {
+                            "texture": "tomato_stage_3",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "center": {
+                            "texture": "tomato_center",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "tomato": {
+                            "texture": "tomato_side",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        }
+                    },
+                    "selection_box": {
+                        "origin": [
+                            -5,
+                            0,
+                            -5
+                        ],
+                        "size": [
+                            10,
+                            1,
+                            10
+                        ]
+                    }
+                },
+                "attached=false,disarmed=false,east=true,north=false,powered=false,south=true,west=true": {
+                    "name": "tomato_stage_4",
+                    "geometry": "geometry.customcrops.tomato.stage_4",
+                    "material_instances": {
+                        "*": {
+                            "texture": "tomato_stage_4",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "leaves": {
+                            "texture": "tomato_stage_4",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "center": {
+                            "texture": "tomato_center",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "tomato": {
+                            "texture": "tomato_side",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        }
+                    },
+                    "selection_box": {
+                        "origin": [
+                            -5,
+                            0,
+                            -5
+                        ],
+                        "size": [
+                            10,
+                            1,
+                            10
+                        ]
+                    }
+                },
+                "attached=false,disarmed=false,east=true,north=false,powered=true,south=true,west=true": {
+                    "name": "tomato_stage_golden",
+                    "geometry": "geometry.customcrops.tomato.stage_4",
+                    "material_instances": {
+                        "*": {
+                            "texture": "tomato_stage_4",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "leaves": {
+                            "texture": "tomato_stage_4",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "center": {
+                            "texture": "tomato_center",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "tomato": {
+                            "texture": "tomato_golden",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        }
+                    },
+                    "selection_box": {
+                        "origin": [
+                            -5,
+                            0,
+                            -5
+                        ],
+                        "size": [
+                            10,
+                            1,
+                            10
+                        ]
+                    }
                 }
             }
         }
