--- a/geyser_mappings/tripwire_mappings.json
+++ b/geyser_mappings/tripwire_mappings.json
@@ -14,6 +14,18 @@
                             "render_method": "alpha_test",
                             "face_dimming": true,
                             "ambient_occlusion": true
+                        },
+                        "stage": {
+                            "texture": "pitaya_stage",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "log": {
+                            "texture": "pitaya_log",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
                         }
                     },
                     "selection_box": {
@@ -1739,6 +1751,186 @@
                     "material_instances": {
                         "*": {
                             "texture": "dead_crop",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        }
+                    },
+                    "selection_box": {
+                        "origin": [
+                            -5,
+                            0,
+                            -5
+                        ],
+                        "size": [
+                            10,
+                            1,
+                            10
+                        ]
+                    }
+                },
+                "attached=false,disarmed=true,east=false,north=false,powered=true,south=false,west=true": {
+                    "name": "pitaya_stage_1",
+                    "geometry": "geometry.customcrops.pitaya.stage_1",
+                    "material_instances": {
+                        "*": {
+                            "texture": "pitaya_stage",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "stage": {
+                            "texture": "pitaya_stage",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "log": {
+                            "texture": "pitaya_log",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        }
+                    },
+                    "selection_box": {
+                        "origin": [
+                            -5,
+                            0,
+                            -5
+                        ],
+                        "size": [
+                            10,
+                            1,
+                            10
+                        ]
+                    }
+                },
+                "attached=false,disarmed=false,east=false,north=false,powered=false,south=true,west=false": {
+                    "name": "pitaya_stage_2",
+                    "geometry": "geometry.customcrops.pitaya.stage_2",
+                    "material_instances": {
+                        "*": {
+                            "texture": "pitaya_stage",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "stage": {
+                            "texture": "pitaya_stage",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "log": {
+                            "texture": "pitaya_log",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        }
+                    },
+                    "selection_box": {
+                        "origin": [
+                            -5,
+                            0,
+                            -5
+                        ],
+                        "size": [
+                            10,
+                            1,
+                            10
+                        ]
+                    }
+                },
+                "attached=false,disarmed=false,east=false,north=false,powered=true,south=true,west=false": {
+                    "name": "pitaya_stage_3",
+                    "geometry": "geometry.customcrops.pitaya.stage_3",
+                    "material_instances": {
+                        "*": {
+                            "texture": "pitaya_stage",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "stage": {
+                            "texture": "pitaya_stage",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "log": {
+                            "texture": "pitaya_log",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        }
+                    },
+                    "selection_box": {
+                        "origin": [
+                            -5,
+                            0,
+                            -5
+                        ],
+                        "size": [
+                            10,
+                            1,
+                            10
+                        ]
+                    }
+                },
+                "attached=false,disarmed=false,east=false,north=false,powered=false,south=true,west=true": {
+                    "name": "pitaya_stage_4",
+                    "geometry": "geometry.customcrops.pitaya.stage_4",
+                    "material_instances": {
+                        "*": {
+                            "texture": "pitaya_stage",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "stage": {
+                            "texture": "pitaya_stage",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "log": {
+                            "texture": "pitaya_log",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        }
+                    },
+                    "selection_box": {
+                        "origin": [
+                            -5,
+                            0,
+                            -5
+                        ],
+                        "size": [
+                            10,
+                            1,
+                            10
+                        ]
+                    }
+                },
+                "attached=false,disarmed=false,east=false,north=false,powered=true,south=true,west=true": {
+                    "name": "pitaya_stage_5",
+                    "geometry": "geometry.customcrops.pitaya.stage_5",
+                    "material_instances": {
+                        "*": {
+                            "texture": "pitaya_stage",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "stage": {
+                            "texture": "pitaya_stage",
+                            "render_method": "alpha_test",
+                            "face_dimming": true,
+                            "ambient_occlusion": true
+                        },
+                        "log": {
+                            "texture": "pitaya_log",
                             "render_method": "alpha_test",
                             "face_dimming": true,
                             "ambient_occlusion": true
